--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://azizzmills.github.io/Portfolio",
   "name": "azizz",
   "version": "0.1.0",
   "private": true,
@@ -6,16 +7,29 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "babel-upgrade": "^1.0.1",
+    "bootstrap": "^5.3.1",
+    "gh-pages": "^6.1.1",
+    "lottie-react": "^2.4.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.0",
+    "react-simple-typewriter": "^5.0.1",
+    "react-spring": "^9.7.3",
+    "react-vertical-timeline-component": "^3.6.0",
+    "swiper": "^11.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
